--- a/classification/graph_predictor.ipynb
+++ b/classification/graph_predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c04fd0c4",
+   "id": "597d3ae8",
    "metadata": {},
    "source": [
     "# GraphPredictor\n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "id": "12e75a63",
+   "execution_count": 2,
+   "id": "2b74e242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +157,13 @@
     "        \n",
     "        generator = PaddedGraphGenerator(graphs=stellGraphs)\n",
     "        test_gen = generator.flow(graphs=stellGraphs, targets=np.array(labels))\n",
+    "        \n",
     "        return self.model.evaluate(test_gen, verbose=1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "542ceb62",
+   "id": "8e7584ba",
    "metadata": {},
    "source": [
     "## Usage of GraphPredictor"
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d4f0263",
+   "id": "d0d0a447",
    "metadata": {},
    "source": [
     "Konstruktor berie ako parameter cestu k modelu alebo samotny model"
@@ -178,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
-   "id": "45ffef66",
+   "execution_count": 3,
+   "id": "0b2173a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "id": "398b9328",
+   "execution_count": 4,
+   "id": "d369407d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff362169",
+   "id": "319fabdc",
    "metadata": {},
    "source": [
     "### Predictions \n",
@@ -209,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
-   "id": "e519fd9f",
+   "execution_count": 5,
+   "id": "a1702fa8",
    "metadata": {},
    "outputs": [
     {
@@ -218,17 +219,17 @@
      "output_type": "stream",
      "text": [
       "30log.lua:\n",
-      "\tbasic 89.4%\n",
-      "\tshebang 5.5%\n",
-      "\tspec 5.1%\n",
+      "\tbasic 88.31%\n",
+      "\tshebang 6.2%\n",
+      "\tspec 5.49%\n",
       "dumptorrent.lua:\n",
-      "\tbasic 22.34%\n",
-      "\tshebang 74.91%\n",
-      "\tspec 2.76%\n",
+      "\tbasic 28.75%\n",
+      "\tshebang 66.13%\n",
+      "\tspec 5.12%\n",
       "cl_error_messages.lua:\n",
-      "\tbasic 1.06%\n",
-      "\tshebang 1.69%\n",
-      "\tspec 97.24%\n"
+      "\tbasic 1.09%\n",
+      "\tshebang 1.27%\n",
+      "\tspec 97.65%\n"
      ]
     }
    ],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e5bd1b",
+   "id": "3b3496dc",
    "metadata": {},
    "source": [
     "### Evaluation\n",
@@ -247,20 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
-   "id": "962303a1",
+   "execution_count": 6,
+   "id": "5d63a01d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 0s 5ms/step - loss: 0.1430 - accuracy: 1.0000 - precision_2: 1.0000\n",
+      "3/3 [==============================] - 0s 4ms/step - loss: 0.1872 - accuracy: 1.0000 - precision: 1.0000\n",
       "\n",
       "Test Set Metrics:\n",
-      "\tloss: 0.1430\n",
+      "\tloss: 0.1872\n",
       "\taccuracy: 1.0000\n",
-      "\tprecision_2: 1.0000\n"
+      "\tprecision: 1.0000\n"
      ]
     }
    ],
@@ -274,17 +275,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d8677e",
+   "id": "4fdf3a07",
    "metadata": {},
    "source": [
     "### Graph vizualisation\n",
-    "Funkcia berie ako parameter cestu ku konkretnemu grafu alebo."
+    "Funkcia berie ako parameter cestu ku konkretnemu grafu alebo instanciu nacitaneho grafu"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c534fe9",
+   "id": "48dc060a",
    "metadata": {},
    "outputs": [],
    "source": [
